Actualizar nuxtjs.yml

--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -1,78 +1,41 @@
-name: Deploy Nuxt 4 to GitHub Pages
-
+# https://github.com/actions/deploy-pages#usage
+name: Deploy to GitHub Pages
 on:
+  workflow_dispatch:
   push:
     branches:
-      - main   # canvia si la teva branca principal és una altra
-
-permissions:
-  contents: write
-
-env:
-  #Expose the secret(s) as environment variables for the job so you can use them in "if" conditions.
-  CUSTOM_DOMAIN: ${{ secrets.CUSTOM_DOMAIN }}        # optional: example.com
-  CUSTOM_DOMAIN_URL: ${{ secrets.CUSTOM_DOMAIN_URL }} # optional: https://example.com
-
+      - main
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+      - run: corepack enable
+      - uses: actions/setup-node@v4
         with:
-          fetch-depth: 0
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+          node-version: "20"
+      # Pick your own package manager and build script
+      - run: npm install
+      - run: npx nuxt build --preset github_pages
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          node-version: 22
-          cache: npm
-
-      - name: Show node/npm versions (debug)
-        run: |
-          node -v
-          npm -v
-          uname -a
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Generate static site
-        env:
-          NODE_OPTIONS: --max-old-space-size=4096
-          # allow step-level env fallback; we already exposed CUSTOM_DOMAIN_URL and CUSTOM_DOMAIN at job env
-          NUXT_PUBLIC_SITE_URL: ${{ env.CUSTOM_DOMAIN_URL }}
-          CUSTOM_DOMAIN: ${{ env.CUSTOM_DOMAIN }}
-        run: |
-          # Fallback to https://$CUSTOM_DOMAIN if CUSTOM_DOMAIN_URL not provided
-          if [ -z "$NUXT_PUBLIC_SITE_URL" ] && [ -n "$CUSTOM_DOMAIN" ]; then
-            export NUXT_PUBLIC_SITE_URL="https://$CUSTOM_DOMAIN"
-            echo "Set NUXT_PUBLIC_SITE_URL to $NUXT_PUBLIC_SITE_URL"
-          else
-            echo "NUXT_PUBLIC_SITE_URL is $NUXT_PUBLIC_SITE_URL"
-          fi
-
-          npx nuxi generate --no-exit-on-error
-
-      - name: Verify output
-        run: |
-          echo "Output summary:"
-          du -sh .output/public || true
-          ls -la .output/public | sed -n '1,200p' || true
-
-      - name: Create CNAME for custom domain (optional)
-        # Use env.CUSTOM_DOMAIN here — do NOT use secrets.CUSTOM_DOMAIN in 'if'
-        if: env.CUSTOM_DOMAIN != ''
-        run: |
-          echo "${{ env.CUSTOM_DOMAIN }}" > .output/public/CNAME
-          echo "Created CNAME: ${{ env.CUSTOM_DOMAIN }}"
-          cat .output/public/CNAME
-
-      - name: Deploy to gh-pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: .output/public
-          publish_branch: gh-pages
-          commit_message: "ci: deploy Nuxt site to gh-pages"
+          path: ./.output/public
+  # Deployment job
+  deploy:
+    # Add a dependency to the build job
+    needs: build
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+    # Deploy to the github_pages environment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    # Specify runner + deployment step
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
