--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@iconify-json/simple-icons": "^1.2.53",
     "@nuxt/ui": "^4.0.0",
     "@nuxtjs/i18n": "10.1.0",
+    "@nuxtjs/sitemap": "^7.4.7",
     "nuxt": "^4.1.2"
   },
   "devDependencies": {
